# dep-check

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .tool-versions  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  dependency_config.yaml  dev-requirements.in  dev-requirements.txt  dev.mk  graph.dot  graph_config.yaml  help.mk  pyproject.toml  requirements.txt  setup.cfg  setup.py  spellcheck_private_dictionary  tox.ini
.circleci/: config.yml  spellcheck_private_dictionary
.github/: CODEOWNERS
.github/workflows/: release.yml  validate_pr.yaml
dep-check/: cli.py
dep_check/: __init__.py  checker.py  cli.py  dependency_finder.py  graph_drawer.py  main.py  models.py
dep_check/infra/: file_system.py  go_parser.py  io.py  python_parser.py  std_lib_filter.py
dep_check/infra/lib/: find_dependencies.go  goparse.c  goparse.h  setup.py
dep_check/lib/: go_parse.go  goparse.c
dep_check/use_cases/: __init__.py  app_configuration.py  build.py  check.py  draw_graph.py  interfaces.py
doc/: CHANGELOG.md  Makefile  authors.md  conf.py  contrib.rst  contributing.md  history.md  index.md  index.rst  installation.md  make.bat  usage.md
doc/architecture/decisions/: 0001-record-architecture-decisions.md  0002-which-open-source-license-to-use.md
tests/: conftest.py  fakefile.py  sys  test_app_config.py  test_build.py  test_check.py  test_checker.py  test_dep-check.py  test_draw_graph.py  test_finder.py  test_graph_drawer.py  test_main.py  test_models.py  test_parser.py
tests_go/: test_go.py
