[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dep_check"
dynamic = ["version"]
description = "Python Dependency Check Tool"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"}
authors = [
    {name = "LumApps", email = "core-devs@lumapps.com"}
]
keywords = ["python", "Dependency", "linter", "architecture", "quality", "dep-check", "dep_check"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "Click",
    "PyYAML",
    "Jinja2",
    "ordered-set",
]

[project.urls]
Homepage = "https://github.com/lumapps/dep-check"
Download = "https://github.com/lumapps/dep-check/tarball/master"

[project.scripts]
dep_check = "dep_check.main:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["doc", "tests", "tests.*"]

[tool.setuptools.dynamic]
version = {attr = "dep_check.__version__"}

[tool.isort]
# Apply the isort configuration proposed by black
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.mypy]
[[tool.mypy.overrides]]
module = "dep_check.infra.lib"
ignore_missing_imports = true
