[metadata]
name = dep_check
version = attr: dep_check.__version__
description = Python Dependency Check Tool
long_description = file: README.md, doc/history.md
long_description_content_type = text/markdown
author = LumApps
author_email = MAIL
url = https://github.com/lumapps/dep-check
download_url = https://github.com/lumapps/dep-check/tarball/master
keywords = python, Dependency, linter, architecture, quality, dep-check, dep_check
license = MIT License
license_file = LICENSE
classifiers = 
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires = pytest-runner
tests_require = pytest
test_suite = tests
install_requires =
    Click>=6.0
    PyYAML<6
    Jinja2

[options.entry_points]
console_scripts = 
    dep_check=dep_check.main:main

[options.packages.find]
exclude =
	doc
	tests
    tests.*

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:dep_check/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[isort]
# Apply the isort configuration proposed by black
force_grid_wrap=0
include_trailing_comma=True
known_standard_library=dataclasses
known_third_party=flask,google,marshmallow,sqlalchemy,yaml,structlog
line_length=88
multi_line_output=3
use_parentheses=True
